phone screenshots added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <!-- styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!-- Animate css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+
   </head>
   <body>
 
@@ -32,18 +35,18 @@
 
         <div class="collapse navbar-collapse" id="navbarMain">
           <ul class="navbar-nav mx-auto main-nav">
-            <!-- <li class="nav-item active">
+            <li class="nav-item active">
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-us.html">About Us</a>
+              <a class="nav-link" href="#">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="https://medium.com/tulix-app" target="_blank" rel="noopener">Blog</a>
+              <a class="nav-link " href="#" target="_blank" rel="noopener">Blog</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link " href="mailto:hello@tulix.app">Contact Us</a>
-            </li> -->
+              <a class="nav-link " href="#">Contact Us</a>
+            </li>
           </ul>
           <!-- <a type="button" href="#" class="btn btn-primary mr-2">Set Up Your Shop</a> -->
 					<!-- <a href="#" class="btn btn-outline-primary" target="_blank">Take Our Survey</a> -->
@@ -63,7 +66,7 @@
             </div>            
           </div>
           <div class="col-lg-6 col-xl-5 offset-xl-2 hero-img">
-            <img src="assets/img/iphone.png" alt="phone one" class="img-fluid pl-lg-5" loading="lazy">
+            <img src="assets/img/iphone1.png" alt="phone one" class="img-fluid pl-lg-5 animate__animated animate__slideInRight" loading="lazy">
           </div> 
         </div>       
       </div>
@@ -72,7 +75,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-xl-5">
-            <img src="assets/img/iphone.png" alt="Insta Shop" class="img-fluid pr-5" loading="lazy" style="max-height: 528px;">
+            <img src="assets/img/iphone2.png" alt="Insta Shop" class="img-fluid pr-5 animate__animated animate__slideInLeft" loading="lazy" style="max-height: 528px;">
           </div>
           <div class="col-lg-6 col-xl-5 offset-xl-1 d-flex flex-column justify-content-center order-first order-lg-last">
             <h6 class="text-success">Features</h6>
