--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6 col-xl-5 d-flex flex-column justify-content-center mb-5">
-            <h1 class="hero-title mb-4"><span class="text-success">Lorem</span> dolor sit amet consectetur adipisicing.</h1>
-            <p class="lead mb-4">Lorem ipsum dolor sit amet.</p>
+            <h3 class="hero-title mb-4">
+              <span class="text-success">Discover</span> new Instagram shops & <span class="text-success">Leave</span> a rating or review after you shop
+            </h3>
+            <!-- <p class="lead mb-4">Lorem ipsum dolor sit amet.</p> -->
             <div class="hero-cta ">
               <a type="button" href="#" class="btn btn-primary">Set Up Your Shop</a>                   
             </div>            
@@ -75,17 +77,65 @@
     <section class="features">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-xl-5" data-aos="fade-up-right">
+          <div class="col-lg-4 col-xl-5" data-aos="fade-up-right">
             <img src="assets/img/iphone2.png" alt="Insta Shop" class="img-fluid pr-5" loading="lazy" style="max-height: 528px;">
           </div>
-          <div class="col-lg-6 col-xl-5 offset-xl-1 d-flex flex-column justify-content-center order-first order-lg-last">
+          <div class="col-lg-8 col-xl-5 d-flex flex-column justify-content-center order-first order-lg-last">
             <h6 class="text-success">Features</h6>
-            <h2 class="section-title mb-4">What's possible on Insta Shop?</h2>
-            <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ad!</p>
+            <h4 class="section-title mb-4">Explore all your shopping options </h2>
+            <!-- <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ad!</p> -->
             <div class="row">
+              <div class="col-lg-6">
+                <div class="col-lg-12">
+                  <h5 class="text-success mb-4">Your shop</h5>
+                </div>
+                <div class="col-12 mb-4">
+                  <i class="fas fa-eye"></i>
+                  <h6> Want to be seen & discovered</h6>
+                </div>
+                <div class="col-12 mb-4">
+                  <i class="fas fa-chart-line"></i>
+                  <h6> Want to make more  sales</h6>
+                </div>
+                <div class="col-12 mb-4">
+                  <i class="fas fa-money-bill-wave"></i>
+                  <h6> Customers on a budget</h6>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="col-12">
+                  <h5 class="text-success mb-4">Shopper</h5>
+                </div>
+                <div class="col-12 mb-4">
+                  <i class="fas fa-list"></i>
+                  <h6>See list of shops in your category</h6>
+                </div>
+                <div class="col-12 mb-4">
+                  <i class="fas fa-star-half-alt"></i>
+                  <h6>See ratings and reviews to gain trust</h6>
+                </div>
+                <div class="col-12 mb-4">
+                  <i class="fas fa-funnel-dollar"></i>
+                  <h6> Explore and choose shops according to your budget</h6>
+                </div>
+              </div>
+            </div>
+            <!-- <h5 class="text-success">Shopper</h5>
+            <div class="row">
+              <div class="col-6 mb-4">
+								<h6><i class="fas fa-list"></i>See list of shops in your category</h6>
+							</div>
+              <div class="col-6 mb-4">
+								<h6><i class="fas fa-star-half-alt"></i>See ratings and reviews to gain trust</h6>
+							</div>
+              <div class="col-12 mb-4">
+								<h6><i class="fas fa-funnel-dollar"></i> Explore and choose shops according to your budget</h6>
+							</div>
+            </div> -->
+            <!-- <div class="row">
 							<div class="col-6 mb-4">
-								<img src="assets/img/icons/identification.svg" alt="" class="img-fluid mb-3" width="50">
-								<h6>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
+								<img src="assets/img/icons/identification.svg" alt="" class="img-fluid mb-2" width="50">
+								<h6>Want to be seen & discovered</h6>
 							</div>
 							<div class="col-6 mb-4">
 								<img src="assets/img/icons/calculator.svg" alt="" class="img-fluid mb-3" width="32">
@@ -99,7 +149,7 @@
                 <img src="assets/img/icons/check.svg" alt="" class="img-fluid mb-3" width="40">
                 <h6> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -129,6 +179,7 @@
     </footer>
     <script src="assets/js/jquery.slim.min.js"></script>
     <script type="module" src="assets/js/starter.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <!-- initialize aos -->
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
