how it works section added

--- a/index.html
+++ b/index.html
@@ -1,88 +1,97 @@
 <!doctype html>
 <html lang="en">
-  
+
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content=""/>
-    <meta property=og:image:width content=1200>
-    <meta property=og:image:height content=630>
-    <title>Insta Shop - Description Description Description</title>
-    <link href="https://www.instagram.com/static/images/ico/apple-touch-icon-76x76-precomposed.png/666282be8229.png" rel="shortcut icon" type="image/png">
-    <!-- google fonts -->
-    <link rel="preconnect" href="https://fonts.gstatic.com/">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&amp;display=swap" rel="stylesheet">
-    <!-- font awesome icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-    <!-- styles -->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Animate css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <!-- aos -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-  </head>
-  <body>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="" />
+  <meta property=og:image:width content=1200>
+  <meta property=og:image:height content=630>
+  <title>Insta Shop - Description Description Description</title>
+  <link href="https://www.instagram.com/static/images/ico/apple-touch-icon-76x76-precomposed.png/666282be8229.png"
+    rel="shortcut icon" type="image/png">
+  <!-- google fonts -->
+  <link rel="preconnect" href="https://fonts.gstatic.com/">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&amp;display=swap" rel="stylesheet">
+  <!-- font awesome icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+  <!-- styles -->
+  <link rel="stylesheet" href="assets/css/style.css">
+  <!-- Animate css -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <!-- aos -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+</head>
 
-    <!-- navigation bar -->
-    <header class="container mt-3">
-      <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0">
-        <a class="navbar-brand" href="/">
-          <!-- <img src="assets/img/logo.svg" alt=" logo" class="nav-brand" height="40">  -->
-          <h2>LOGO</h2>
-        </a>
-        <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarMain" aria-controls="navbarsMain" aria-expanded="false" aria-label="Toggle navigation">
-          <svg height="50" className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 6h16M4 12h16m-7 6h7" /></svg>
-        </button>
+<body>
 
-        <div class="collapse navbar-collapse" id="navbarMain">
-          <ul class="navbar-nav mx-auto main-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            <li class="nav-item">
+  <!-- navigation bar -->
+  <header class="container mt-3">
+    <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0">
+      <a class="navbar-brand" href="/">
+        <!-- <img src="assets/img/logo.svg" alt=" logo" class="nav-brand" height="40">  -->
+        <h2>LOGO</h2>
+      </a>
+      <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarMain"
+        aria-controls="navbarsMain" aria-expanded="false" aria-label="Toggle navigation">
+        <svg height="50" className="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+          <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M4 6h16M4 12h16m-7 6h7" />
+        </svg>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarMain">
+        <ul class="navbar-nav mx-auto main-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <!-- <li class="nav-item">
+              <a class="nav-link text-capitalize" href="how-it-works.html">How it works</a>
+            </li> -->
+          <!-- <li class="nav-item">
               <a class="nav-link " href="#" target="_blank" rel="noopener">Blog</a>
             </li>
             <li class="nav-item">
               <a class="nav-link " href="#">Contact Us</a>
-            </li>
-          </ul>
-          <!-- <a type="button" href="#" class="btn btn-primary mr-2">Set Up Your Shop</a> -->
-					<!-- <a href="#" class="btn btn-outline-primary" target="_blank">Take Our Survey</a> -->
-         
-        </div>
-      </nav>
-    </header>
+            </li> -->
+        </ul>
+        <!-- <a type="button" href="#" class="btn btn-primary mr-2">Set Up Your Shop</a> -->
+        <!-- <a href="#" class="btn btn-outline-primary" target="_blank">Take Our Survey</a> -->
 
-    <section class="hero">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-6 col-xl-5 d-flex flex-column justify-content-center mb-5">
-            <h3 class="hero-title mb-4">
-              <span class="text-success">Discover</span> new Instagram shops & <span class="text-success">Leave</span> a rating or review after you shop
-            </h3>
-            <!-- <p class="lead mb-4">Lorem ipsum dolor sit amet.</p> -->
-            <div class="hero-cta ">
-              <a type="button" href="#" class="btn btn-primary">Set Up Your Shop</a>                   
-            </div>            
-          </div>
-          <div class="col-lg-6 col-xl-5 offset-xl-2 hero-img" data-aos="fade-left">
-            <img src="assets/img/iphone1.png" alt="phone one" class="img-fluid pl-lg-5" loading="lazy">
-          </div> 
-        </div>       
       </div>
-    </section>
-    <section class="features">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-xl-5" data-aos="fade-up-right">
-            <img src="assets/img/iphone2.png" alt="Insta Shop" class="img-fluid pr-5" loading="lazy" style="max-height: 528px;">
+    </nav>
+  </header>
+
+  <section class="hero">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 col-xl-5 d-flex flex-column justify-content-center mb-5">
+          <h3 class="hero-title mb-4">
+            <span class="text-success">Discover</span> new Instagram shops & <span class="text-success">Leave</span> a
+            rating or review after you shop
+          </h3>
+          <!-- <p class="lead mb-4">Lorem ipsum dolor sit amet.</p> -->
+          <div class="hero-cta ">
+            <a type="button" href="#" class="btn btn-primary text-capitalize">Set Up Your shop for free</a>
           </div>
-          <div class="col-lg-8 col-xl-5 d-flex flex-column justify-content-center order-first order-lg-last">
-            <h6 class="text-success">Features</h6>
-            <h4 class="section-title mb-4">Explore all your shopping options </h2>
+          <p class="mt-4">Join 150 instagram shops that have already signed up so far.</p>
+        </div>
+        <div class="col-lg-6 col-xl-5 offset-xl-2 hero-img" data-aos="fade-left">
+          <img src="assets/img/iphone1.png" alt="phone one" class="img-fluid pl-lg-5" loading="lazy">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="features">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-xl-5" data-aos="fade-up-right">
+          <img src="assets/img/iphone2.png" alt="Insta Shop" class="img-fluid pr-5" loading="lazy"
+            style="max-height: 528px;">
+        </div>
+        <div class="col-lg-8 col-xl-5 d-flex flex-column justify-content-center order-first order-lg-last">
+          <h6 class="text-success">Features</h6>
+          <h4 class="section-title mb-4">Explore all your shopping options </h2>
             <!-- <p class="lead mb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Obcaecati, ad!</p> -->
             <div class="row">
               <div class="col-lg-6">
@@ -95,7 +104,7 @@
                 </div>
                 <div class="col-12 mb-4">
                   <i class="fas fa-chart-line"></i>
-                  <h6> Want to make more  sales</h6>
+                  <h6> Want to make more sales</h6>
                 </div>
                 <div class="col-12 mb-4">
                   <i class="fas fa-money-bill-wave"></i>
@@ -150,41 +159,88 @@
                 <h6> Lorem ipsum dolor sit amet consectetur adipisicing elit.</h6>
               </div>
             </div> -->
-          </div>
         </div>
       </div>
-    </section>
-    <footer class="footer">
-      <div class="container">
-        <hr>
-        <div class="row mt-5">
-          <div class="col-lg-6 d-flex flex-column flex-lg-row align-items-lg-center text-center">
-            <a class="navbar-brand mb-2" href="/">
-              <!-- <img src="assets/img/logo.svg"  height="30" alt="lucent - the simple side of life"> -->
-              <h2>LOGO</h2>
-            </a>
-            <p class="small mb-3 mb-lg-0">©2021 Insta Shop. All rights reserved. An 
-              <a href="#">Insta Shop</a> portfolio company. </p>
+    </div>
+  </section>
+  <section class="about-us">
+    <div class="container">
+      <div class="row justify-content-lg-center">
+        <div class="col-lg-10">
+          <!-- <h6 class="text-success">How it works</h6> -->
+          <h2 class="section-title mb-5 text-success text-lg-center">How it works</h2>
+          <p class="lead ">
+            There are many businesses on Instagram we are not aware of. It takes time to find them however
+            we are here to make these businesses known by leaving a review after you shop so that people can
+            discover these great hidden gems.
+          </p>
+          <p class="lead">Online shoppers have been using instagram to search for products however they face
+            two key challenge.
+          <ul>
+            <li class="text-bold">No ratings and reviews for the shoppers confidence </li>
+            <li class="text-bold">The comments on your insta shop are full of enquires</li>
+          </ul>
+          </p>
+          <div class="row justify-content-lg-center mt-5 screenshots">
+            <div class="col-6 col-lg col-12 col-xs mb-4">
+              <div class="position-relative">
+                <img src="./assets/img/1.jpeg" alt="" class="img-fluid mb-4">
+              </div>
+            </div>
+            <div class="col-6 col-lg col-12 col-xs mb-4">
+              <div class="position-relative">
+                <img src="./assets/img/2.jpeg" alt="" class="img-fluid  mb-4">
+              </div>
+            </div>
+            <div class="col-6 col-lg col-12 col-xs mb-4">
+              <div class="position-relative">
+                <img src="./assets/img/3.jpeg" alt="" class="img-fluid mb-4">
+              </div>
+            </div>
+
           </div>
-          <div class="col-lg-6  d-flex flex-column justify-content-lg-center align-items-lg-end text-center ">
-            <p class="mb-0">
-              <a href="https://facebook.com/" role="link" aria-label="#" class="pl-lg-4"><i class="fa fa-facebook"></i></a>
-              <a href="https://instagram.com/" role="link" aria-label="#" class="pl-4"><i class="fa fa-instagram"></i></a>
-              <a href="https://twitter.com/" role="link" aria-label="#" class="pl-4"><i class="fa fa-twitter"></i></a>
-              <a href="https://www.linkedin.com/company/" role="link" aria-label="#" class="pl-4"><i class="fa fa-linkedin"></i></a>
-            </p>
-          </div>
+          <p class="lead">List your <a target="_blank" href="https://insta-shop.wezadevelopment.com/">amazing shop</a>
+            and allow shoppers to find you and leave a review & rating after they shop with you.</p>
         </div>
       </div>
-    </footer>
-    <script src="assets/js/jquery.slim.min.js"></script>
-    <script type="module" src="assets/js/starter.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <!-- initialize aos -->
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script>
-      AOS.init();
-    </script>
-  </body>
+    </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <hr>
+      <div class="row mt-5">
+        <div class="col-lg-6 d-flex flex-column flex-lg-row align-items-lg-center text-center">
+          <a class="navbar-brand mb-2" href="/">
+            <!-- <img src="assets/img/logo.svg"  height="30" alt="lucent - the simple side of life"> -->
+            <h2>LOGO</h2>
+          </a>
+          <p class="small mb-3 mb-lg-0">©2021 Insta Shop. All rights reserved. An
+            <a href="#">Insta Shop</a>
+          </p>
+        </div>
+        <div class="col-lg-6  d-flex flex-column justify-content-lg-center align-items-lg-end text-center ">
+          <p class="mb-0">
+            <a href="https://facebook.com/" role="link" aria-label="#" class="pl-lg-4"><i
+                class="fa fa-facebook"></i></a>
+            <a href="https://instagram.com/" role="link" aria-label="#" class="pl-4"><i class="fa fa-instagram"></i></a>
+            <a href="https://twitter.com/" role="link" aria-label="#" class="pl-4"><i class="fa fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/company/" role="link" aria-label="#" class="pl-4"><i
+                class="fa fa-linkedin"></i></a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <script src="assets/js/jquery.slim.min.js"></script>
+  <script type="module" src="assets/js/starter.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <!-- initialize aos -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
+</body>
 
 </html>
