how it works section added

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
           </h3>
           <!-- <p class="lead mb-4">Lorem ipsum dolor sit amet.</p> -->
           <div class="hero-cta ">
-            <a type="button" href="#" class="btn btn-primary text-capitalize">Set Up Your shop for free</a>
+            <a type="button" target="_blank" href="https://insta-shop.wezadevelopment.com/" class="btn btn-primary text-capitalize">Set Up Your shop for free</a>
           </div>
           <p class="mt-4">Join 150 instagram shops that have already signed up so far.</p>
         </div>
