--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
   <header class="container mt-3">
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-0">
       <a class="navbar-brand" href="/">
-        <!-- <img src="assets/img/logo.svg" alt=" logo" class="nav-brand" height="40">  -->
-        <h2>LOGO</h2>
+        <img src="assets/img/logo.svg" alt=" logo" class="nav-brand" height="60"> 
+        <!-- <h2>LOGO</h2> -->
       </a>
       <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarMain"
         aria-controls="navbarsMain" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,9 +42,9 @@
 
       <div class="collapse navbar-collapse" id="navbarMain">
         <ul class="navbar-nav mx-auto main-nav">
-          <li class="nav-item active">
+          <!-- <li class="nav-item active">
             <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
-          </li>
+          </li> -->
           <!-- <li class="nav-item">
               <a class="nav-link text-capitalize" href="how-it-works.html">How it works</a>
             </li> -->
@@ -181,7 +181,7 @@
             <li class="text-bold">The comments on your insta shop are full of enquires</li>
           </ul>
           </p>
-          <div class="row justify-content-lg-center mt-5 screenshots">
+          <div class="row justify-content-lg-center mt-5 screenshots" data-aos="zoom-in-up">
             <div class="col-6 col-lg col-12 col-xs mb-4">
               <div class="position-relative">
                 <img src="./assets/img/1.jpeg" alt="" class="img-fluid mb-4">
@@ -211,8 +211,8 @@
       <div class="row mt-5">
         <div class="col-lg-6 d-flex flex-column flex-lg-row align-items-lg-center text-center">
           <a class="navbar-brand mb-2" href="/">
-            <!-- <img src="assets/img/logo.svg"  height="30" alt="lucent - the simple side of life"> -->
-            <h2>LOGO</h2>
+            <img src="assets/img/logo.svg"  height="30" alt="lucent - the simple side of life">
+            <!-- <h2>LOGO</h2> -->
           </a>
           <p class="small mb-3 mb-lg-0">©2021 Insta Shop. All rights reserved. An
             <a href="#">Insta Shop</a>
